[metadata]
name = psipy
description = Tools for working with PSI MHD models.
long_description = file: README.rst
author = David Stansby
author_email = dstansby@protonmail.com
url = https://psipy.readthedocs.io/en/latest/
license = MIT
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    astropy>=3.2
    dask
    h5py  # For hdf5 files
    heliopy[data, spice]<1
    matplotlib
    numpy
    pyhdf # For hdf4 files
    scipy # For 3D interpolation
    xarray>=0.18

[options.extras_require]
docs =
    matplotlib
    sphinx
    sphinx-automodapi
    numpydoc
    sphinx-rtd-theme
    sphinx-gallery
    parfive
tests =
    parfive
    pytest
    pytest-cov

[tool:pytest]
addopts = --cov=psipy -rxXs
filterwarnings =
    error
    # Fixed in Matplotlib 3.5.2, see https://github.com/matplotlib/matplotlib/issues/21723
    ignore:Auto-removal of grids
