[metadata]
name = psipy
description = Tools for working with PSI MHD models.
long_description = file: README.rst
author = David Stansby
author_email = dstansby@protonmail.com
url = https://psipy.readthedocs.io/en/latest/
license = MIT
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    astropy>=3.2
    dask
    h5py  # For hdf5 files
    heliopy[data, spice]<1
    matplotlib
    numpy
    pyhdf # For hdf4 files
    scipy # For 3D interpolation
    xarray>=0.18

[options.extras_require]
docs =
    matplotlib
    sphinx
    sphinx-automodapi
    numpydoc
    sphinx-rtd-theme
    sphinx-gallery
    parfive
    streamtracer>=1
streamlines =
    streamtracer>=1.2.0
tests =
    parfive
    pytest
    pytest-cov
    streamtracer>=1

[tool:pytest]
addopts = --cov=psipy -ra
filterwarnings =
    error
    # Fixed in Matplotlib 3.5.2, see https://github.com/matplotlib/matplotlib/issues/21723
    ignore:Auto-removal of grids
    # Expected warning from streamtracer
    ignore:numpy.ndarray size changed
    # Probably a bug with parfive
    ignore:unclosed <socket.socket
    ignore:unclosed transport

[isort]
balanced_wrapping = True
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = psipy
length_sort = False
line_length = 80
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
